--- a/HTMLCSSJSPrimer/bootstrap4/index.html
+++ b/HTMLCSSJSPrimer/bootstrap4/index.html
@@ -11,21 +11,26 @@
     <!-- Your own stylesheet -->
 
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            crossorigin="anonymous"></script>
-    <script src="bootstrap-4.0.0/dist/js/bootstrap.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"-->
+            <!--integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"-->
+            <!--crossorigin="anonymous"></script>-->
+    <!--<script src="bootstrap-4.0.0/dist/js/bootstrap.min.js"></script>-->
 
 </head>
 <body>
 <header class="startup text-center text-white d-flex">
     <div class="container my-auto">
         <div class="row">
-            <div class="col-md-12 my-auto text-uppercase">
-                <h1 class="col-md-12">The biggest startup event of the year</h1>
+            <div class="col-lg-12">
+                <h1 class="col-md-12 text-uppercase faded">
+                    <strong>the biggest startup event of the year</strong>
+                </h1>
+                <hr>
             </div>
-            <div class="my-auto col-md-12 col-lg-12">
-                <button class="btn btn-primary btn-lg findout_btn">Find out more</button>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <button class="btn btn-primary btn-xl">Find Out More</button>
             </div>
         </div>
     </div>
