--- a/HTMLCSSJSPrimer/animate.css/index.html
+++ b/HTMLCSSJSPrimer/animate.css/index.html
@@ -8,6 +8,6 @@
 <body>
 <h1 class="animated delay-2s fadeInLeft">ANIMATED TEXT</h1>
 <h1 class="animated infinite bounce">ANIMATED TEXT</h1>
-<h1 class="animated infinite bounceOutDown">ANIMATED TEXT</h1>
+<h1 class="animatedk infinite bounceOutDown">ANIMATED TEXT</h1>
 </body>
 </html>
