--- a/HTMLCSSJSPrimer/bootstrap4/index.html
+++ b/HTMLCSSJSPrimer/bootstrap4/index.html
@@ -35,6 +35,14 @@
         </div>
     </div>
 </header>
+<section>
+    <div class="container d-flex">
+        <div class="row col-md-12">
+            <div class="col-md-6">PROVA</div>
+            <div class="col-md-6">PROVA2</div>
+        </div>
+    </div>
+</section>
 <!--<span class="mainTitle">The biggest startup event of the year</span>-->
 </body>
 </html>
